# LLMTrainer

./: Qwen3_(4B)-Instruct.ipynb  main.py  pyproject.toml
Docs/: ARA 2.0 PRD.md  Phase Plans.md
data/: debug_sample.json  debug_tokens.json  train.json
src/api/: fast_api_server.py
src/bridge/: zmq_handler.py
src/data_gen/: generate_data.py
src/logic/: grpo_rewards.py  prompt_manager.py
src/models/: market_data.py
src/training/: train_grpo.py  train_grpo.txt
tests/: mock_nt8_publisher.py  qwen3_(14b)_reasoning_conversational.py
